<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Marvel Comics</string>
    <string name="default_title_text">No title available</string>
    <string name="default_page_text">NA</string>
    <string name="default_price_text">NA</string>
    <string name="default_description_text">No description available</string>
    <string name="default_author_text">No author available</string>
    <string name="details_activity_title">Comic Details</string>
    <string name="price_label">Price: $</string>
    <string name="pages_label">Pages:</string>
    <string name="description_label">Description:</string>
    <string name="author_label">Authors:</string>
    <string name="budget">Budget:</string>
    <string name="filter">Filter</string>
    <string name="one_hundred">$100</string>
    <string name="results_no_filter">Displaying <xliff:g example="100" id="total">%s</xliff:g> results with no budget filter:</string>
    <string name="results_budget_filtered">Displaying <xliff:g example="100" id="total">%s</xliff:g> results with $<xliff:g example="100" id="total">%s</xliff:g> budget filter:</string>
    <string name="please_provide_budget">Please provide a budget before filtering.</string>
    <string name="total_pages_default_value">Total number of pages: <xliff:g example="100" id="total">%s</xliff:g>.</string>
</resources>
