<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/comics_list_margin"
    android:paddingLeft="@dimen/comics_list_margin"
    android:paddingRight="@dimen/comics_list_margin"
    android:paddingTop="@dimen/comics_list_margin"
    tools:context=".Activities.ComicsListActivity">

    <RelativeLayout
        android:id="@+id/budget_filter_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/budget_label"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_alignParentTop="true"
            android:layout_marginRight="8dp"
            android:gravity="center_vertical"
            android:text="@string/budget"
            android:textAllCaps="true"
            android:textSize="16sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/budget"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_toRightOf="@id/budget_label"
            android:hint="@string/one_hundred"
            android:singleLine="true"
            android:textSize="16sp" />

        <Button
            android:layout_width="88dp"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:onClick="filterResultsOnBudget"
            android:text="@string/filter" />
    </RelativeLayout>

    <TextView
        android:id="@+id/results_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="8dp"
        android:gravity="center_vertical"
        android:text="@string/results_no_filter"
        android:textAllCaps="false"
        android:textSize="16sp"
        android:textStyle="bold"
        android:visibility="invisible" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/comics_list_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <TextView
        android:id="@+id/total_pages_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="8dp"
        android:gravity="center_vertical"
        android:text="@string/total_pages_default_value"
        android:textAllCaps="false"
        android:textSize="14sp"
        android:textStyle="bold"
        android:visibility="invisible" />
</LinearLayout>
